--- a/style.css
+++ b/style.css
@@ -275,7 +275,13 @@ nav{
     margin-top: 100px;
   }
   #ch{
-    margin-top: 100px;
+    margin-top: 20px;
+    font-size: 24px;
+  }
+  body{
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
   }
   
 }
